# hhts-evaluation

./: .gitmodules  CMakeLists.txt
hhts_cli/: CMakeLists.txt  main.cpp
output/hhts/: data-from-paper-figure4.csv  runtime.txt
output/hhts/250/: correlation.csv  correlation.csv.txt  results.csv  results.csv.txt  summary.csv  summary.csv.txt
output/hhts/500/: correlation.csv  correlation.csv.txt  results.csv  results.csv.txt  summary.csv  summary.csv.txt
